--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,13 @@
 root = true
 
 [*]
-indent_style = space
-indent_size = 4
-end_of_line = crlf
 charset = utf-8
+end_of_line = lf
+insert_final_newline = true
+indent_size = 4
+indent_style = space
+max_line_length = 80
+trim_trailing_whitespace = true
+
+[*.md]
 trim_trailing_whitespace = false
-insert_final_newline = false
