--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pg-promise": "^11.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.8.0",
     "styled-components": "^6.0.7",
     "typescript": "5.2.2"
   },
